# Autonomous-Drone-Object-Tracking-using-YOLO-and-ROS2

./: README.md
Object_Detection.v1i.yolov8/: README.dataset.txt  README.roboflow.txt  data.yaml
Object_Detection.v1i.yolov8/test/labels/: left0001_jpg.rf.d5040c1dcbc02929d938e03f2ba96193.txt  left0004_jpg.rf.255f757254275f56f0b8cc77060704b3.txt  left0008_jpg.rf.fbc8099d53a00cf9ee45f7f3d0dc93db.txt  left0012gh_jpg.rf.7407de17c6f700c03e3107ff251a2757.txt  left0013gh_jpg.rf.e0ce6e6b25cb38aedbd95ce42ce29baa.txt  left0023gh_jpg.rf.f6b64890084b2ed529a03d51679f0b52.txt  left0026_jpg.rf.c5c56368cea61f835e1c61836810609b.txt  left0034-2-_jpg.rf.ab36f12816100830337623fc9a2a7983.txt  left0037-2-_jpg.rf.450edfa75a99ccb8d0e6ec3fbcaf87d1.txt  left0038gh_jpg.rf.fc781c997f3260eee79f184a2543548c.txt  left0039-2-_jpg.rf.fea02d99355b867016cb56d1d3aead13.txt  left0040-2-_jpg.rf.dfb4a9a1fa3680224ea9f1d0e1b67704.txt  left0043-2-_jpg.rf.629a5a9627b834abdbe61d1ae59ad581.txt  left0043gh_jpg.rf.34232eab2514611f9c9ba4c27d45af9b.txt  left0044-2-_jpg.rf.5c34bed1c5d7593b3bcf977ca1092e13.txt  (+128 more)
drone_yolo_detector/: package.xml  setup.cfg  setup.py
drone_yolo_detector/drone_yolo_detector/: yolo_node.py
drone_yolo_detector/launch/: yolo_detection.launch.py
hybrid_pkg/: CMakeLists.txt  package.xml
hybrid_pkg/hybrid_pkg/: __init__.py  simple_py_node.py
hybrid_pkg/launch/: hybrid_launch.py  launch_world_launch.py
hybrid_pkg/model/X3AUV/: model.sdf
hybrid_pkg/src/: simple_cpp_node.cpp
hybrid_pkg/worlds/: multicopter_velocity_control_forest.sdf
runs/detect/train/: args.yaml  results.csv
(+1291 files in other folders)
