<?xml version="1.0"?>
<package format="3">
  <name>hybrid_pkg</name>
  <version>0.0.1</version>
  <description>Hybrid ROS2 package with both C++ and Python nodes</description>

  <maintainer email="arashdeepsingh1512@gmail.com">Arashdeep Singh</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Dependencies -->
  <depend>rclcpp</depend>
  <depend>rclpy</depend>

  <!-- For Python -->
  <exec_depend>python3</exec_depend>
  <exec_depend>setuptools</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
